--- a/stuff/templates/stuff/navbar.html
+++ b/stuff/templates/stuff/navbar.html
@@ -58,7 +58,7 @@
                     {% endfor %}
                         
                   </ul>
-            <a href="#">📞Kontakt</a>
+            <a href="{% url 'stuff:contact_Page' %}">📞Kontakt</a>
         </nav>
 </body>
 
