--- a/static/styles/cartstyle.css
+++ b/static/styles/cartstyle.css
@@ -8,7 +8,7 @@
 }
 body{
     background-color: #edddf8;
-    background: linear-gradient(to right, #ffffff, #491e66);
+    background: linear-gradient(to right, #ffffff, #081c6c);
     min-height: 100vh;
     vertical-align: middle;
     display: flex;
