--- a/static/styles/kontaktstyle.css
+++ b/static/styles/kontaktstyle.css
@@ -9,7 +9,7 @@
 
 body{
     background-color: #edddf8;
-    background: linear-gradient(to right, #ffffff, #491e66);
+    background: linear-gradient(to right, #ffffff, #2d3867, #081c6c);
     min-height: 100vh;
     vertical-align: middle;
     display: flex;
