--- a/static/styles/loginstyle.css
+++ b/static/styles/loginstyle.css
@@ -9,7 +9,7 @@
 
 body{
     background-color: #edddf8;
-    background: linear-gradient(to right, #ffffff, #491e66);
+    background: linear-gradient(to right, #ffffff, #081c6c);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -166,7 +166,7 @@ body{
 .toggle{
     background-color: #edddf8;
     height: 100%;
-    background: linear-gradient(to right, #8637bb, #491e66);
+    background: linear-gradient(to right, #223376, #081c6c);
     color: #fff;
     position: relative;
     left: -100%;
